--- a/expense-tracker-dashboard/src/Components/Overview/Overview.css
+++ b/expense-tracker-dashboard/src/Components/Overview/Overview.css
@@ -1,6 +1,9 @@
-button {
-  padding: 1rem;
-  background: #EAEAEA;
+.over-view-container button {
+  padding: 0.5rem 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #eaeaea;
   border: 0.85px solid #bdbdbd;
   border-radius: 6.76px;
 }
@@ -28,7 +31,7 @@ button {
   gap: 30px;
 }
 .left input {
-  padding: 15px;
+  padding: 0.5rem;
 }
 .search_bar {
   padding: 0px 30px;
