--- a/expense-tracker-dashboard/src/Components/ExpenseCategory/ExpenseCategory.css
+++ b/expense-tracker-dashboard/src/Components/ExpenseCategory/ExpenseCategory.css
@@ -14,9 +14,26 @@ aside p {
   font-weight: 500;
 }
 aside button {
-  padding: .8rem 1rem;
+  padding: 0.8rem 1rem;
   border: 1px solid #cdcdcd;
   border-radius: 0.4rem;
   background: #fcfcfc;
   text-align: start;
+}
+
+@media (max-width: 1400px) {
+  aside {
+    padding: 1rem;
+    gap: 0.8rem;
+  }
+
+  aside p {
+    color: #00006b;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  aside button {
+    padding: 0.5rem 0.8rem;
+    font-size: 0.7rem;
+  }
 }
