--- a/expense-tracker-dashboard/src/Components/MainContainer/Main.css
+++ b/expense-tracker-dashboard/src/Components/MainContainer/Main.css
@@ -6,3 +6,14 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media (max-width: 1400px) {
+  .main-left {
+    width: 57vw;
+  }
+  .main {
+    margin-top: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+  }
+}
