--- a/expense-tracker-dashboard/src/Components/SideBar/Sidebar.css
+++ b/expense-tracker-dashboard/src/Components/SideBar/Sidebar.css
@@ -49,3 +49,48 @@
   transition: margin-left 0.3s;
   padding: 16px;
 }
+
+@media (max-width: 1400px) {
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    background-color: #ffffff;
+    overflow-x: hidden;
+    padding-top: 1rem;
+    transition: 0.3s;
+    box-shadow: 11px -1px 16px -4px rgb(0 0 0 / 18%);
+  }
+
+  .sidenav button {
+    padding: 0.2rem 60px;
+    width: 100%;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: 600;
+    color: #545454;
+    display: block;
+    transition: 0.3s;
+    margin: 0.5rem 0;
+    background: white;
+    border: 1px solid #eaeaea;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .sidenav button span img {
+    width: 20px;
+    height: 20px;
+  }
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  #main {
+    transition: margin-left 0.3s;
+    padding: 16px;
+  }
+}
